All microservices done and functions added